--- a/index.html
+++ b/index.html
@@ -70,12 +70,6 @@
       </div>
       <div id="menu-blur"></div>
 
-      <!-- <svg class="background-image" viewBox="0 0 612 792" xmlns="http://www.w3.org/2000/svg">
-
-        <path id="zigzag"  d="m247 3.6-193.077 41.105 193.077 41.105-193.077 41.105 193.077 41.105-193.077 41.106 193.077 41.105-193.077 41.105 193.077 41.105-193.077 41.105 193.077 41.105-193.077 41.106 193.077 41.105" fill="none" stroke="#626AAC" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"/>
-        
-      </svg> -->
-
     </header>
 
     <!-- END OF MENU SECTION -->
@@ -138,7 +132,7 @@
           </p>
 
 
-          <a class="blog--link"><u>Czytaj więcej</u></a>
+          <a class="blog--link">Czytaj więcej</a>
         </div>
 
     </div>
@@ -155,7 +149,7 @@
           </p>
 
 
-          <a class="blog--link"><u>Czytaj więcej</u></a>
+          <a class="blog--link">Czytaj więcej</a>
         </div>
 
     </div>
@@ -169,7 +163,7 @@
           <div class="blog--text_container">
 
 
-            <h1>Transport <span style="font-family: serif; font-weight: 300;"><i>Shots</i></span></h1>
+            <h1 id="podcast" >Transport <span style="font-family: serif; font-weight: 300;"><i>Shots</i></span></h1>
 
             <hr class="blog--line">
 
@@ -216,6 +210,27 @@
 
           <div class="blog--text_container">
 
+            <h1 class="top">Transport <span style="font-family: serif; font-weight: 300;"><i>Stats</i></span></h1>
+            <h2>Krótko o Warszawie</h2>
+
+            <svg class="stats" width="50px" fill="none" height="50px" xmlns="http://www.w3.org/2000/svg">
+              <circle stroke-width="1" stroke="#7F99F8" cx="25" cy="25" r="20"/>
+              <circle id="stat" fill="transparent" cx="25" cy="25" r="5" stroke="#7F99F8" stroke-width="10" 
+              stroke-dasharray="calc(100 * 31.42 / 100) 31.42"/>
+            </svg>
+
+            <p>
+              75% uzytkownikow komunikacji miejskiej to kobiety
+            </p>
+  
+  
+            <a class="blog--link">Przeczytaj w 3 minuty</a>
+            <hr class="blog--line">
+
+          </div>
+
+          <div class="blog--text_container">
+
 
             <h2>Krótko o Warszawie</h2>
             <p>
@@ -237,6 +252,10 @@
     </div>
 
   </div>
+
+  <footer>
+
+  </footer>
 
 
   </body>
